<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/etQuery"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/sfa_etQuery_hint"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etQuery"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/sfa_etLocation_hint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etQuery"
        android:layout_alignParentLeft="true"
        android:text="@string/sfa_tvQuery"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etLocation"
        android:layout_alignParentLeft="true"
        android:text="@string/sfa_tvLocation"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvMostPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvPrice"
        android:layout_marginTop="15dp"
        android:text="@string/sfa_tvMostPopular"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swMostPopularON"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMostPopular"
        android:layout_centerHorizontal="true"
        android:text="@string/sfa_swMostPopular_on"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swMostPopularHN"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swMostPopularON"
        android:layout_below="@+id/swMostPopularON"
        android:text="@string/sfa_swMostPopular_hn"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swMostPopularOD"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swMostPopularHN"
        android:layout_below="@+id/swMostPopularHN"
        android:text="@string/sfa_swMostPopular_od"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swMostPopularD"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swMostPopularOD"
        android:layout_below="@+id/swMostPopularOD"
        android:text="@string/sfa_swMostPopular_d"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swGeneralFeaturesTO"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGeneralFeatures"
        android:layout_centerHorizontal="true"
        android:text="@string/sfa_swGeneralFeatures_to"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swGeneralFeaturesGFK2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swGeneralFeaturesTO"
        android:layout_below="@+id/swGeneralFeaturesTO"
        android:text="@string/sfa_swGeneralFeatures_gfk"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/swGeneralFeaturesGFG"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swGeneralFeaturesGFK2"
        android:layout_below="@+id/swGeneralFeaturesGFK2"
        android:text="@string/sfa_swGeneralFeatures_gfg"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spDistanceRange"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/swMostPopularD"
        android:entries="@array/sfa_spDistance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spSortBy"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spDistanceRange"
        android:entries="@array/sfa_spSortBy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spSortBy"
        android:layout_alignParentLeft="true"
        android:text="@string/sfa_tvSortBy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spDistanceRange"
        android:layout_alignParentLeft="true"
        android:text="@string/sfa_tvDistance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLocation"
        android:layout_below="@+id/tvLocation"
        android:layout_marginTop="15dp"
        android:text="@string/sfa_tvPrice"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/cbPrice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_alignParentRight="true"
        android:text="@string/sfa_cbPrice4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/cbPrice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_toLeftOf="@+id/cbPrice4"
        android:text="@string/sfa_cbPrice3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/cbPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_toLeftOf="@+id/cbPrice3"
        android:text="@string/sfa_cbPrice2"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <CheckBox
        android:id="@+id/cbPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_toLeftOf="@+id/cbPrice2"
        android:text="@string/sfa_cbPrice1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvGeneralFeatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSortBy"
        android:layout_marginTop="15dp"
        android:text="@string/sfa_tvGeneralFeatures"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
